force-app/main/default/objects/Account/fields/Favorite_Music__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Music__c</fullName>
    <label>Favorite Music</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pop</fullName>
            </value>
            <value>
                <fullName>Western song</fullName>
            </value>
            <value>
                <fullName>Rock</fullName>
            </value>
            <value>
                <fullName>Luk Krung Song</fullName>
            </value>
            <value>
                <fullName>Classic</fullName>
            </value>
            <value>
                <fullName>Jazz</fullName>
            </value>
            <value>
                <fullName>Thai Folk song</fullName>
            </value>
            <value>
                <fullName>Reggae</fullName>
            </value>
            <value>
                <fullName>Latin</fullName>
            </value>
            <value>
                <fullName>Ska</fullName>
            </value>
            <value>
                <fullName>Dance</fullName>
            </value>
            <value>
                <fullName>Disco</fullName>
            </value>
            <value>
                <fullName>Seoul</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>Metal</fullName>
            </value>
            <value>
                <fullName>Korean song</fullName>
            </value>
            <value>
                <fullName>Blues</fullName>
            </value>
            <value>
                <fullName>Chinese song</fullName>
            </value>
            <value>
                <fullName>Hip Hop</fullName>
            </value>
            <value>
                <fullName>Japanese song</fullName>
            </value>
            <value>
                <fullName>Mor Lam Song</fullName>
            </value>
            <value>
                <fullName>Folk</fullName>
            </value>
            <value>
                <fullName>Rhythm &amp; Blues (R&amp;B)</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>