force-app/main/default/objects/Account/fields/Favorite_Place_Travel__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Place_Travel__c</fullName>
    <label>Favorite Place Travel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>sea</fullName>
            </value>
            <value>
                <fullName>Department store</fullName>
            </value>
            <value>
                <fullName>Mountain</fullName>
            </value>
            <value>
                <fullName>Museum</fullName>
            </value>
            <value>
                <fullName>Temple / Historic site</fullName>
            </value>
            <value>
                <fullName>Amusement park</fullName>
            </value>
            <value>
                <fullName>Waterfall</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Zoo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>