force-app/main/default/objects/Account/fields/Favorite_Sport__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Sport__c</fullName>
    <label>Favorite Sport</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>Badminton</fullName>
            </value>
            <value>
                <fullName>Cycling</fullName>
            </value>
            <value>
                <fullName>Fitness / Yoga / Pilates</fullName>
            </value>
            <value>
                <fullName>Soccer</fullName>
            </value>
            <value>
                <fullName>Swimming</fullName>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Self-defense ie. Boxing, Judo, Taekwondo</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>