force-app/main/default/objects/Account/fields/Fee_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Fee_Account_Plan__c</fullName>
    <label>Fee (Wallet) Account Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>