force-app/main/default/objects/Account/fields/Fee_Actual__c.field-meta.xml
<CustomField>
    <fullName>Fee_Actual__c</fullName>
    <label>Fee (Actual NI) Core Bank</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>