force-app/main/default/objects/Account/fields/Fee_SoW__c.field-meta.xml
<CustomField>
    <fullName>Fee_SoW__c</fullName>
    <formula>IF(Fee_Wallet__c=0,0,(( Fee_Actual__c  / (MONTH( Income_as_of_Wallet__c)))*12)/  Fee_Wallet__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee (SoW) Core Bank</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>