force-app/main/default/objects/Account/fields/Fee_Sow_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Fee_Sow_Account_Plan__c</fullName>
    <formula>if( Fee_Account_Plan__c = 0,0, Fee_Plan__c/Fee_Account_Plan__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee (Sow) Account Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>