force-app/main/default/objects/Account/fields/First_Name_ENG_PE__c.field-meta.xml
<CustomField>
    <fullName>First_Name_ENG_PE__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>First Name EN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>