force-app/main/default/objects/Account/fields/FlagTest__c.field-meta.xml
<CustomField>
    <fullName>FlagTest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FlagTest</label>
    <type>Checkbox</type>
</CustomField>