force-app/main/default/objects/Account/fields/Fna_Avatar_Image__c.field-meta.xml
<CustomField>
    <fullName>Fna_Avatar_Image__c</fullName>
    <formula>IF( ISBLANK(Fna_Avatar_Url__c) , IMAGE(&quot;/_slds/images/themes/lightning_blue/lightning_blue_profile_avatar_200.png&quot; , &quot;Unknown&quot; , 150 , 150) , IMAGE(&quot;/sfc/servlet.shepherd/version/download/&quot; + Fna_Avatar_Url__c , &quot;FNA Avatar&quot; , 100, 50))</formula>
    <label>Fna Avatar Image</label>
    <type>Text</type>
</CustomField>