force-app/main/default/objects/Account/fields/Fna_Avatar_Name__c.field-meta.xml
<CustomField>
    <fullName>Fna_Avatar_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fna Avatar Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>