force-app/main/default/objects/Account/fields/Fna_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Fna_Create_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fna Create Date</label>
    <type>DateTime</type>
</CustomField>