force-app/main/default/objects/Account/fields/Fna_Have_Referral__c.field-meta.xml
<CustomField>
    <fullName>Fna_Have_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fna Have Referral</label>
    <type>Checkbox</type>
</CustomField>