force-app/main/default/objects/Account/fields/Fna_Product_Holding__c.field-meta.xml
<CustomField>
    <fullName>Fna_Product_Holding__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fna Product Holding</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>