force-app/main/default/objects/Account/fields/Fna_Product_Interested__c.field-meta.xml
<CustomField>
    <fullName>Fna_Product_Interested__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fna Product Interested</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>