force-app/main/default/objects/Account/fields/FoundRecurringDate__c.field-meta.xml
<CustomField>
    <fullName>FoundRecurringDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FoundRecurringDate</label>
    <type>Date</type>
</CustomField>