force-app/main/default/objects/Account/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Group Profile data</description>
    <label>Group</label>
    <referenceTo>Group__c</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>