force-app/main/default/objects/Account/fields/Group_Key_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Group_Key_Decision_Maker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group Key Decision Maker</label>
    <type>Checkbox</type>
</CustomField>