force-app/main/default/objects/Account/fields/Have_collateral_flag__c.field-meta.xml
<CustomField>
    <fullName>Have_collateral_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have collateral flag</label>
    <type>Checkbox</type>
</CustomField>