force-app/main/default/objects/Account/fields/High_Risk_Flag__c.field-meta.xml
<CustomField>
    <fullName>High_Risk_Flag__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>High Risk Flag</label>
    <length>20</length>
    <type>Text</type>
</CustomField>