force-app/main/default/objects/Account/fields/Hobbies__c.field-meta.xml
<CustomField>
    <fullName>Hobbies__c</fullName>
    <label>Hobbies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Watch movie at the Theatre</fullName>
            </value>
            <value>
                <fullName>Travels</fullName>
            </value>
            <value>
                <fullName>Family activities</fullName>
            </value>
            <value>
                <fullName>Exercise, Wellness/Beauty-related activities</fullName>
            </value>
            <value>
                <fullName>Stage performance (Play/Concert)</fullName>
            </value>
            <value>
                <fullName>DIY / Art / Cooking / Gardening / Photography</fullName>
            </value>
            <value>
                <fullName>Shopping</fullName>
            </value>
            <value>
                <fullName>Leisure activities at home (TV shows, sport shows, music shows, reading books, surfing internet)</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>