force-app/main/default/objects/Account/fields/IAL__c.field-meta.xml
<CustomField>
    <fullName>IAL__c</fullName>
    <formula>CASE( IAL_level__c, 
					&quot;No&quot;,&quot;ไม่มีข้อมูล IAL&quot;, 
					&quot;2.1&quot;, &quot;ต่ำ 2.1&quot;,
					&quot;2.2&quot;, &quot;ต่ำ 2.2&quot;,
					&quot;2.3&quot;, &quot;ปานกลาง 2.3&quot;,
					&quot;3.0&quot;, &quot;สูง 3.0&quot;,
					&quot;&quot;)</formula>
    <label>IAL</label>
    <type>Text</type>
</CustomField>