force-app/main/default/objects/Account/fields/IAL_level__c.field-meta.xml
<CustomField>
    <fullName>IAL_level__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IAL level</label>
    <length>5</length>
    <type>Text</type>
</CustomField>