force-app/main/default/objects/Account/fields/ID_Number_PE__c.field-meta.xml
<CustomField>
    <fullName>ID_Number_PE__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>เลขที่เอกสารสำคัญของลูกค้า</inlineHelpText>
    <label>ID Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>