force-app/main/default/objects/Account/fields/ID_populated__c.field-meta.xml
<CustomField>
    <fullName>ID_populated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ID_populated</label>
    <type>Checkbox</type>
</CustomField>