force-app/main/default/objects/Account/fields/ID_Type_PE__c.field-meta.xml
<CustomField>
    <fullName>ID_Type_PE__c</fullName>
    <description>Identification Type Ex. Citizen ID, BRN ID, Passport ID, Alien ID, Work permit</description>
    <inlineHelpText>ประเภทเอกสารสำคัญของลูกค้า</inlineHelpText>
    <label>ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Customer_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>BRN ID</fullName>
            </value>
            <value>
                <fullName>Citizen ID</fullName>
            </value>
            <value>
                <fullName>Passport ID</fullName>
            </value>
            <value>
                <fullName>Work permit ID</fullName>
            </value>
            <value>
                <fullName>Alien ID</fullName>
            </value>
            <value>
                <fullName>Tax ID</fullName>
            </value>
            <value>
                <fullName>Other ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>