force-app/main/default/objects/Account/fields/iigproduct_2__FromChatSession__c.field-meta.xml
<CustomField>
    <fullName>iigproduct_2__FromChatSession__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FromChatSession</label>
    <referenceTo>iigproduct_2__ChatSession__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>