force-app/main/default/objects/Account/fields/Inactive_User__c.field-meta.xml
<CustomField>
    <fullName>Inactive_User__c</fullName>
    <formula>Owner.IsActive = FALSE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inactive User</label>
    <type>Checkbox</type>
</CustomField>