force-app/main/default/objects/Account/fields/Income_as_of_Wallet__c.field-meta.xml
<CustomField>
    <fullName>Income_as_of_Wallet__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Income as of (Wallet)</label>
    <type>Date</type>
</CustomField>