force-app/main/default/objects/Account/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industry</label>
    <referenceTo>Industry__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>