force-app/main/default/objects/Account/fields/Is_my_Zone_BRC__c.field-meta.xml
<CustomField>
    <fullName>Is_my_Zone_BRC__c</fullName>
    <formula>IF(AND(RTL_Most_Operating_Branch__c != null, $User.Zone_Code__c != null),
RTL_Most_Operating_Branch__r.RTL_Zone_Code__c = $User.Zone_Code__c,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is my Zone BRC</label>
    <type>Checkbox</type>
</CustomField>