force-app/main/default/objects/Account/fields/Is_Pending_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Is_Pending_for_Approval__c</fullName>
    <description>Check the record is pending for approval</description>
    <formula>if(AND(OR(ISPICKVAL(Account_Approval_Status__c, &quot;Pending for Approval&quot;), 
										ISPICKVAL(Account_Approval_Status__c, &quot;1st Approver Approved&quot;),
										ISPICKVAL(Account_Approval_Status__c, &quot;2nd Approver Approved&quot;),
										ISPICKVAL(Account_Approval_Status__c, &quot;3rd Approver Approved&quot; ),
										NOT(ISBLANK(Change_to_be_owner_ID__c) )
									)
							,
							NOT(
											OR(ISPICKVAL(Account_Approval_Status__c, &quot;Final Approved&quot;) ,
														ISPICKVAL(Account_Approval_Status__c, &quot;Recalled&quot; ),
														ISPICKVAL(Account_Approval_Status__c, &quot;Rejected&quot; )
													) 
							)
						)
			,TRUE,FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ลูกค้าที่อยู่ระหว่างการขอเปลี่ยนผู้ดูแล</inlineHelpText>
    <label>Is Pending for Approval</label>
    <type>Checkbox</type>
</CustomField>