force-app/main/default/objects/Account/fields/Is_Reorg_Wealth_RM__c.field-meta.xml
<CustomField>
    <fullName>Is_Reorg_Wealth_RM__c</fullName>
    <formula>AND(
RTL_RM_Name__c &lt;&gt; NULL
,RTL_RM_Name__c &lt;&gt; &apos;00000&apos;
,BEGINS( RTL_RM_Name__c, &quot;00&quot;)
,RTL_Wealth_RM__r.RTL_Branch_Code__c &lt;&gt; NULL
, OR(RTL_Wealth_RM__r.RTL_Branch_Code__c &lt;&gt; RIGHT(RTL_RM_Name__c, 3),
NOT(BEGINS( RTL_Wealth_RM__r.Title, &quot;Branch Manager&quot;)) )
)</formula>
    <label>Is Reorg Wealth RM</label>
    <type>Checkbox</type>
</CustomField>