force-app/main/default/objects/Account/fields/Is_Zone_Manager_Wealth_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Is_Zone_Manager_Wealth_Assigned__c</fullName>
    <formula>AND(
RTL_RM_Name__c &lt;&gt; NULL
,RTL_Wealth_RM__c &lt;&gt; NULL
,BEGINS( RTL_Wealth_RM__r.Title, &quot;Zone&quot;)
,BEGINS( RTL_RM_Name__c, &quot;00&quot;)
)</formula>
    <label>Is Zone Manager Wealth Assigned</label>
    <type>Checkbox</type>
</CustomField>