force-app/main/default/objects/Account/fields/IsBranchManagerWealthAssigned_Date__c.field-meta.xml
<CustomField>
    <fullName>IsBranchManagerWealthAssigned_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IsBranchManagerWealthAssigned_Date</label>
    <type>Date</type>
</CustomField>