force-app/main/default/objects/Account/fields/IsDisqualified__c.field-meta.xml
<CustomField>
    <fullName>IsDisqualified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDisqualified</label>
    <type>Checkbox</type>
</CustomField>