force-app/main/default/objects/Account/fields/IsReorgWealthRM_Date__c.field-meta.xml
<CustomField>
    <fullName>IsReorgWealthRM_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IsReorgWealthRM_Date</label>
    <type>Date</type>
</CustomField>