force-app/main/default/objects/Account/fields/IsWFUpdate__c.field-meta.xml
<CustomField>
    <fullName>IsWFUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Workflow update before run trigger. 
purpose for run trigger one time. 
Update Account owner and Previous owner (WF) will update this flag for run trigger</description>
    <label>IsWFUpdate</label>
    <type>Checkbox</type>
</CustomField>