force-app/main/default/objects/Account/fields/IsZoneManagerWealthAssigned_Date__c.field-meta.xml
<CustomField>
    <fullName>IsZoneManagerWealthAssigned_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IsZoneManagerWealthAssigned_Date</label>
    <type>Date</type>
</CustomField>