force-app/main/default/objects/Account/fields/KYC__c.field-meta.xml
<CustomField>
    <fullName>KYC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>KYC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>