force-app/main/default/objects/Account/fields/KYC_CCI1_Completed__c.field-meta.xml
<CustomField>
    <fullName>KYC_CCI1_Completed__c</fullName>
    <label>KYC CCI1 Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>