force-app/main/default/objects/Account/fields/KYC_Customer_status__c.field-meta.xml
<CustomField>
    <fullName>KYC_Customer_status__c</fullName>
    <label>KYC Customer status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
                <label>AC - ลูกค้าปกติ  - ACTIVE</label>
            </value>
            <value>
                <fullName>A2</fullName>
                <label>A2 - ลูกค้าเสี่ยงระดับ 2</label>
            </value>
            <value>
                <fullName>A3</fullName>
                <label>A3 - ลูกค้าเสี่ยงระดับ 3</label>
            </value>
            <value>
                <fullName>A4</fullName>
                <label>A4 - ลูกค้าเสี่ยงระดับ 4 (ชื่อ)</label>
            </value>
            <value>
                <fullName>S4</fullName>
                <label>S4 - ลูกค้าเสี่ยงระดับ 4 (ประเทศ)</label>
            </value>
            <value>
                <fullName>DC</fullName>
                <label>DC - เสียชีวิต - DECEASED</label>
            </value>
            <value>
                <fullName>FD</fullName>
                <label>FD - รอลบรหัสลูกค้า - FLAGGED FOR DELETE</label>
            </value>
            <value>
                <fullName>IN</fullName>
                <label>IN - NACTIVE</label>
            </value>
            <value>
                <fullName>PC</fullName>
                <label>PC - PREVIOUS CUSTOMER</label>
            </value>
            <value>
                <fullName>PR</fullName>
                <label>PR - PROSPECT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>