force-app/main/default/objects/Account/fields/KYC_flag__c.field-meta.xml
<CustomField>
    <fullName>KYC_flag__c</fullName>
    <formula>IF(ISBLANK(KYC_flag_limited__c) ,&quot;ข้อมูลลูกค้าสมบูรณ์&quot;,

IF(KYC_flag_limited__c ==&apos;Block U&apos;,&quot;Block U ข้อมูลลูกค้าสมบูรณ์&quot;,
IF(KYC_flag_limited__c ==&apos;Block B&apos;,&quot;Block B ข้อมูลลูกค้าไม่สมบูรณ์ แต่สามารถทำธุรกรรมได้&quot;,
IF(KYC_flag_limited__c ==&apos;Block I&apos;,&quot;Block I ข้อมูลลูกค้าไม่สมบูรณ์ และไม่สามารถทำธุรกรรมได้&quot;,
IF(KYC_flag_limited__c ==&apos;Block S&apos;,&quot;Block S ปลดล็อคชั่วคราว ให้ลูกค้าบุคคลธรรมดา&quot;,
IF(KYC_flag_limited__c ==&apos;Block T&apos;,&quot;Block T ปลดล็อคชั่วคราว ให้ลูกค้านิติบุคคล&quot;,&quot;&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KYC flag</label>
    <type>Text</type>
</CustomField>