force-app/main/default/objects/Account/fields/KYC_flag_limited__c.field-meta.xml
<CustomField>
    <fullName>KYC_flag_limited__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>KYC flag</label>
    <length>10</length>
    <type>Text</type>
</CustomField>