force-app/main/default/objects/Account/fields/KYC_next_review_date__c.field-meta.xml
<CustomField>
    <fullName>KYC_next_review_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>KYC next review date</label>
    <type>Date</type>
</CustomField>