force-app/main/default/objects/Account/fields/Last_Generate_task_date__c.field-meta.xml
<CustomField>
    <fullName>Last_Generate_task_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Generate task date</label>
    <type>Date</type>
</CustomField>