force-app/main/default/objects/Account/fields/Last_login_success_date__c.field-meta.xml
<CustomField>
    <fullName>Last_login_success_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last login success date</label>
    <type>Date</type>
</CustomField>