force-app/main/default/objects/Account/fields/Last_name_PE__c.field-meta.xml
<CustomField>
    <fullName>Last_name_PE__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Last Name TH</label>
    <length>40</length>
    <type>Text</type>
</CustomField>