force-app/main/default/objects/Account/fields/Last_Name_PE_Eng__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_PE_Eng__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Last Name EN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>