force-app/main/default/objects/Account/fields/LastGetOsc17__c.field-meta.xml
<CustomField>
    <fullName>LastGetOsc17__c</fullName>
    <description>Last timestamp call OSC17.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>LastGetOsc17</label>
    <type>DateTime</type>
</CustomField>