force-app/main/default/objects/Account/fields/Loan_Classification__c.field-meta.xml
<CustomField>
    <fullName>Loan_Classification__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Loan Classification</label>
    <length>50</length>
    <type>Text</type>
</CustomField>