force-app/main/default/objects/Account/fields/Main_Bank_Group1_Value__c.field-meta.xml
<CustomField>
    <fullName>Main_Bank_Group1_Value__c</fullName>
    <description>to keep main bank credit card information value (Group1)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Main Bank Group1 Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>