force-app/main/default/objects/Account/fields/Main_Bank_Group2_Value__c.field-meta.xml
<CustomField>
    <fullName>Main_Bank_Group2_Value__c</fullName>
    <description>to keep main bank credit card information value (Group2)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Main Bank Group2 Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>