force-app/main/default/objects/Account/fields/Main_Bank_Group3_Name__c.field-meta.xml
<CustomField>
    <fullName>Main_Bank_Group3_Name__c</fullName>
    <description>to keep main bank credit card information (Group3)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Main Bank Group3 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>