force-app/main/default/objects/Account/fields/MainBank_MoreDetail__c.field-meta.xml
<CustomField>
    <fullName>MainBank_MoreDetail__c</fullName>
    <formula>HYPERLINK( LEFT($Api.Partner_Server_URL_580, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_580))+&apos;lightning/r/Account/&apos;+Id+&apos;/view&apos;, &apos;More Detail&apos;, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MainBank MoreDetail</label>
    <type>Text</type>
</CustomField>