force-app/main/default/objects/Account/fields/Market_Consent__c.field-meta.xml
<CustomField>
    <fullName>Market_Consent__c</fullName>
    <formula>CASE( UPPER(RTL_Market_Consent__c) ,
&quot;Y&quot;, $Label.Market_Consent_Consent_to_disclosure_Y,
&quot;N&quot;,  $Label.Market_Consent_Consent_to_disclosure_N,
&quot;&quot;)</formula>
    <inlineHelpText>การให้ความยินยอมในการเปิดเผยข้อมูลให้บุคคลเพื่อวัตถุประสงค์ทางการตลาด</inlineHelpText>
    <label>Market Consent</label>
    <type>Text</type>
</CustomField>