force-app/main/default/objects/Account/fields/MIG_Group__c.field-meta.xml
<CustomField>
    <fullName>MIG_Group__c</fullName>
    <description>Temporary use for migration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MIG_Group</label>
    <length>20</length>
    <type>Text</type>
</CustomField>