force-app/main/default/objects/Account/fields/Mobile_Number_PE__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number_PE__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Mobile or Office Phone Number must be entered</inlineHelpText>
    <label>Mobile No.</label>
    <type>Phone</type>
</CustomField>