force-app/main/default/objects/Account/fields/Murex_Counter_Label__c.field-meta.xml
<CustomField>
    <fullName>Murex_Counter_Label__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Counter Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>