force-app/main/default/objects/Account/fields/NAMBRL__c.field-meta.xml
<CustomField>
    <fullName>NAMBRL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BRL Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>