force-app/main/default/objects/Account/fields/Net_Profit_Baht__c.field-meta.xml
<CustomField>
    <fullName>Net_Profit_Baht__c</fullName>
    <label>Net Profit (Baht)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>