force-app/main/default/objects/Account/fields/Next_Generate_task_date__c.field-meta.xml
<CustomField>
    <fullName>Next_Generate_task_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Generate task date</label>
    <type>Date</type>
</CustomField>