force-app/main/default/objects/Account/fields/NI_Actual__c.field-meta.xml
<CustomField>
    <fullName>NI_Actual__c</fullName>
    <label>NI (Actual NI) Core Bank</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>