force-app/main/default/objects/Account/fields/NI_Plan__c.field-meta.xml
<CustomField>
    <fullName>NI_Plan__c</fullName>
    <label>NI (Expected NI) Account Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>