force-app/main/default/objects/Account/fields/NI_SoW__c.field-meta.xml
<CustomField>
    <fullName>NI_SoW__c</fullName>
    <formula>if(NI_Wallet__c=0,0,(
(
( NIIc_Actual__c + NIId_Actual__c +  Fee_Actual__c + Supply_Chain_Actual__c ) / MONTH( Income_as_of_Wallet__c )
)*12
)/ NI_Wallet__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NI (SoW) Core Bank</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>