force-app/main/default/objects/Account/fields/NI_SoW_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>NI_SoW_Account_Plan__c</fullName>
    <formula>if( NI_Plan__c= 0, 0 , NI_Account_Plan__c/NI_Plan__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NI (SoW) Account Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>